# fastcampus-incident-scenarios

./: .gitignore  COE.md  Dockerfile  README.md  blunder.sql  helm-dev-values.yaml  helm-prod-values.yaml  helm-redis-values.yaml  load-test.js
.github/workflows/: deploy.yaml
application/: consumer.py  pyproject.toml
application/config/: urls.py
application/config/settings/: __init__.py  base.py  prod.py
application/lectures/: admin.py  models.py  serializers.py  views.py
application/lectures/migrations/: 0001_initial.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
infrastructure/: .terraform.lock.hcl  eks.tf  local.tf  locals.tf  main.tf  output.tf  rds.tf  variables.tf  vpc.tf
manifests/dev/: deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
manifests/prod/: deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
